added a class that configure ublox GPS automatically. motor mixer / actuator work in progress.

--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -794,6 +794,11 @@
               <FileType>5</FileType>
               <FilePath>..\..\HAL\sensors\UartNMEAGPS.h</FilePath>
             </File>
+            <File>
+              <FileName>UartUbloxNMEAGPS.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\sensors\UartUbloxNMEAGPS.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
