changed gyro filtering into PX4 2nd order low pass. changed attitude D filtering to simple low pass filter.

--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -802,7 +802,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>utils</GroupName>
+          <GroupName>utils&amp;math</GroupName>
           <Files>
             <File>
               <FileName>log.cpp</FileName>
@@ -833,6 +833,11 @@
               <FileName>gauss_newton.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\utils\gauss_newton.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>LowPassFilter2p.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\math\LowPassFilter2p.cpp</FilePath>
             </File>
           </Files>
         </Group>
