added sonar support in main controller. added forced parameter in dev_v4 bsp. added throttle output range override. fixed GPS false positive packets. reverted back altitude controller WIP (still a little aggressive). renamed wifi/uart console uart name into "AUX".
removed uart4 from dev_v4(conflicts with 407sonar).

--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -799,6 +799,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\HAL\sensors\UartUbloxNMEAGPS.cpp</FilePath>
             </File>
+            <File>
+              <FileName>Sonar.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\sensors\Sonar.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
