--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -734,6 +734,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\HAL\STM32F4\stm324xg_eval_sdio_sd.c</FilePath>
             </File>
+            <File>
+              <FileName>F4VCP.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\STM32F4\F4VCP.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
