--- a/Project/KEIL5/sample.uvprojx
+++ b/Project/KEIL5/sample.uvprojx
@@ -80,8 +80,8 @@
           <AfterMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>1</RunUserProg2>
-            <UserProg1Name>C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin -o ./Output/MainController/pilot.bin ./Output/MainController/Firmware.axf</UserProg1Name>
-            <UserProg2Name>BIn2Yap.exe output/MainController/pilot.bin</UserProg2Name>
+            <UserProg1Name>C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin -o ./Output/Sample/sample.bin ./Output/Sample/SampleFirmware.axf</UserProg1Name>
+            <UserProg2Name>BIn2Yap.exe output/Sample/sample.bin</UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
             <nStopA1X>0</nStopA1X>
