bootloader: option to reboot into bootloader from main program. trying to compile the fly controller in visualGDB (changed some variable names).

--- a/Project/KEIL5/bootloader.uvprojx
+++ b/Project/KEIL5/bootloader.uvprojx
@@ -482,6 +482,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\HAL\STM32F4\STMLib\STM32F4xx_StdPeriph_Driver\stm32f4xx_tim.c</FilePath>
             </File>
+            <File>
+              <FileName>stm32f4xx_pwr.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\HAL\STM32F4\STMLib\STM32F4xx_StdPeriph_Driver\stm32f4xx_pwr.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
