--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -819,6 +819,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\HAL\sensors\PPMIN.cpp</FilePath>
             </File>
+            <File>
+              <FileName>PCA963x.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\sensors\PCA963x.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1354,7 +1359,7 @@
               <RVCTZI>0</RVCTZI>
               <RVCTOtherData>0</RVCTOtherData>
               <ModuleSelection>0</ModuleSelection>
-              <IncludeInBuild>1</IncludeInBuild>
+              <IncludeInBuild>0</IncludeInBuild>
               <AlwaysBuild>2</AlwaysBuild>
               <GenerateAssemblyFile>2</GenerateAssemblyFile>
               <AssembleAssemblyFile>2</AssembleAssemblyFile>
@@ -1441,7 +1446,7 @@
               <RVCTZI>0</RVCTZI>
               <RVCTOtherData>0</RVCTOtherData>
               <ModuleSelection>0</ModuleSelection>
-              <IncludeInBuild>0</IncludeInBuild>
+              <IncludeInBuild>1</IncludeInBuild>
               <AlwaysBuild>2</AlwaysBuild>
               <GenerateAssemblyFile>2</GenerateAssemblyFile>
               <AssembleAssemblyFile>2</AssembleAssemblyFile>
@@ -1688,6 +1693,16 @@
               <FileName>mrdivide.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\modules\Algorithm\ekf_lib\src\mrdivide.c</FilePath>
+            </File>
+            <File>
+              <FileName>body2ned.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\modules\Algorithm\ekf_lib\src\body2ned.c</FilePath>
+            </File>
+            <File>
+              <FileName>ned2body.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\modules\Algorithm\ekf_lib\src\ned2body.c</FilePath>
             </File>
           </Files>
         </Group>
