WIP: flight_modes. warning: won't fly.

--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -484,6 +484,26 @@
               <FileType>8</FileType>
               <FilePath>..\..\modules\main\pilot.cpp</FilePath>
             </File>
+            <File>
+              <FileName>mode_althold.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\main\mode_althold.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>mode_basic.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\main\mode_basic.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>mode_of_loiter.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\main\mode_of_loiter.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>mode_poshold.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\main\mode_poshold.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
