--- a/Project/visualstudio2008/pilot/pilot.vcproj
+++ b/Project/visualstudio2008/pilot/pilot.vcproj
@@ -1135,6 +1135,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\modules\main\mode_RTL.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\modules\main\mode_RTL.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\modules\main\pilot.cpp"
 					>
 				</File>
