ads1115 support. mo_v3: current and voltage sensor.

--- a/Project/visualstudio2008/pilot/pilot.vcproj
+++ b/Project/visualstudio2008/pilot/pilot.vcproj
@@ -514,6 +514,14 @@
 					Name="Device"
 					>
 					<File
+						RelativePath="..\..\..\HAL\sensors\ads1115.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\HAL\sensors\ads1115.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\HAL\sensors\HMC5983SPI.cpp"
 						>
 					</File>
